kustomize-mock-psp/mock-psp-secondary/sit/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: psp-sec-mock
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /psp-sec-mock-sit(/|$)(.*)
            backend:
              service:
                name: psp-sec-mock
                port:
                  number: 8091
